# erl_gaussian_process

./: .gitignore  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  README.md  erl_gaussian_process.repos  package.xml  pyproject.toml  setup.py
cmake/: erl_gaussian_processConfig.cmake.in  erl_gaussian_process_dependencies.cmake
config/: spgp_occupancy_map_2d.yaml  spgp_occupancy_map_2d_float.yaml
include/erl_gaussian_process/: batch_gp_update_torch.hpp  init.hpp  lidar_gp_1d.hpp  lidar_gp_2d.hpp  lidar_gp_2d.tpp  log_noisy_input_gp.hpp  mapping.hpp  mapping.tpp  noisy_input_gp.hpp  noisy_input_gp.tpp  range_sensor_gp_3d.hpp  range_sensor_gp_3d.tpp  register.hpp  sparse_pseudo_input_gp.hpp  spgp_occupancy_map.hpp  vanilla_gp.hpp  vanilla_gp.tpp
python/binding/: bind_lidar_gp_2d.cpp  bind_mapping.cpp  bind_noisy_input_gp.cpp  bind_range_sensor_gp_3d.cpp  bind_vanilla_gp.cpp  pybind11_erl_gaussian_process.cpp
python/erl_gaussian_process/: __init__.py  __init__.pyi  pyerl_gaussian_process.pyi
src/: batch_gp_update_torch.cpp  init.cpp  lidar_gp_1d.cpp  lidar_gp_2d.cpp  log_noisy_input_gp.cpp  mapping.cpp  noisy_input_gp.cpp  range_sensor_gp_3d.cpp  register.cpp  sparse_pseudo_input_gp.cpp  spgp_occupancy_map.cpp  vanilla_gp.cpp
test/: CMakeLists.txt  cov_fnc.cpp  cov_fnc.h  draw_mapping_curves.py  obs_gp.cpp  obs_gp.h  params.h  strct.h  test_observe_gp_1d.cpp  test_std_gp.cpp
test/gtest/: test_batch_gp_update_torch.cpp  test_lidar_gp_1d.cpp  test_lidar_gp_2d.cpp  test_noisy_input_gp.cpp  test_range_sensor_gp_3d.cpp  test_sparse_pseudo_input_gp.cpp  test_spgp_occupancy_map_2d.cpp  test_vanilla_gp.cpp
