[build-system]
requires = ["setuptools", "wheel", "toml"]

[tool.black]
line-length = 120

[erl]
description = "Python bindings for erl_gaussian_process"
python_pkg_name = "erl_gaussian_process"
pybind_module_name = "pyerl_gaussian_process"
erl_dependencies = ["erl_common", "erl_covariance"]
build_type = "Release"
version = "0.1.0"
author = "Zhirui Dai"
author_email = "zhdai@ucsd.edu"
entry_points = { console_scripts = [] }
license = "MIT"
