[build-system]
requires = ["setuptools", "wheel", "toml"]

[tool.black]
line-length = 120

[erl]
erl_dependencies = ["erl_cmake_tools", "erl_common", "erl_covariance", "erl_geometry"]
build_type = "Release"

[project]
name = "erl_gaussian_process"
version = "0.2.0"
description = "Python package for erl_gaussian_process"
authors = [
    { name = "Zhirui Dai", email = "zhdai@ucsd.edu" }
]
maintainers = [
    { name = "Zhirui Dai", email = "zhdai@ucsd.edu" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = []
